# ChapterAdjust

./: .travis.yml  CMakeLists.txt  README.md
include/: converter.h  define.h
src/: CMakeLists.txt  converter.cpp  main.cpp
test/: test_main.cpp
